Fix wechat p element text-align: justify

--- a/docs/pageThemes/字号偏大-间距偏大-窄屏模式.css
+++ b/docs/pageThemes/字号偏大-间距偏大-窄屏模式.css
@@ -11,6 +11,7 @@
   white-space: pre-line;
   line-height: 30px;
   color: #4a4a4a;
+  word-break: break-all;
 }
 .wrapper blockquote {
   line-height: 22px;
